airsonic/airsonic-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: codeserver
  name: codeserver
  namespace: homeautomation
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: codeserver
    spec:
      containers:
      - image: linuxserver/code-server
        name: codeserver
        ports:
        - containerPort: 8443
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: codeserver-config
      restartPolicy: Always
      volumes:
      - name: codeserver-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/codeserver-config"
status: {}
