airsonic/airsonic-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: airsonic
  name: airsonic
  namespace: mediaserver
spec:
  ports:
  - name: "4040"
    port: 4040
    targetPort: 4040
  selector:
    io.kompose.service: airsonic
status:
  loadBalancer: {}
