airsonic/airsonic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: airsonic
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: airsonic.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: airsonic
          servicePort: 4040
