airsonic/codeserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codeserver
  namespace: homeautomation
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: codeserver.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: codeserver
          servicePort: 8443
